Update: Specifications and add FSS-0010 Encrypted Simple Packet specification.
Add "version date" paragraph to each specification to make it clearer when this specification was last updated.

I happened to notice that there is a mistake in the FSS-000E specification.
I fixed this in the proper FLL source code but this is after the formal 0.6.8 release was made, unfortunately.
This documentation will be more up to date that the current release.

Update the FSS-000E and FSS-000F specifications to reflect the changes formally introduced as of the 0.6.8 release on 2023/12/31.

The FSS-0010 Encrypted Simple Packet specification has been present for a while now but I failed to update the website.
This specification is now present.

--- a/fll/specifications.html
+++ b/fll/specifications.html
@@ -108,6 +108,9 @@
             <a href="fll/specifications/fss/fss-000f.html" class="nav-text link"><div>FSS-000F</div><div>(Simple Packet)</div></a>
           </div>
           <div class="nav-item block">
+            <a href="fll/specifications/fss/fss-0010.html" class="nav-text link"><div>FSS-0010</div><div>(Encrypted Simple Packet)</div></a>
+          </div>
+          <div class="nav-item block">
             <a href="fll/specifications.html#iki" class="nav-text link">IKI</a>
           </div>
           <div class="nav-item block">
@@ -357,6 +360,7 @@ Object_2 This is multiple\" Contents and the trailing quote does not need to be 
                 <li><a href="fll/specifications/fss/fss-000d.html" class="link">FSS-000D: Basic Rule</a></li>
                 <li><a href="fll/specifications/fss/fss-000e.html" class="link">FSS-000E: Payload</a></li>
                 <li><a href="fll/specifications/fss/fss-000f.html" class="link">FSS-000F: Simple Packet</a></li>
+                <li><a href="fll/specifications/fss/fss-0010.html" class="link">FSS-0010: Encrypted Simple Packet</a></li>
               </ul>
             </div>
           </section>
