--- a/fll/specifications/fss/fss-0009.html
+++ b/fll/specifications/fss/fss-0009.html
@@ -81,6 +81,9 @@
 
             <div class="section-content">
               <p class="p">
+                The version date of this specification is <code class="code">2023/07/14</code>.
+              </p>
+              <p class="p">
                 This is based off of <code class="code">fss-0000 (Basic)</code>, except the Object is at the end of the line.
               </p>
               <p class="p">
