--- a/fll/specifications/iki/iki-0000.html
+++ b/fll/specifications/iki/iki-0000.html
@@ -95,6 +95,9 @@
 
             <div class="section-content">
               <p class="p">
+                The version date of this specification is <code class="code">2023/07/14</code>.
+              </p>
+              <p class="p">
                 IKI is a minimally structured WIKI-like syntax meant to be simpler than WIKI syntax.
               </p>
               <p class="p">
