--- a/fll/specifications/iki/iki-0001.html
+++ b/fll/specifications/iki/iki-0001.html
@@ -84,6 +84,9 @@
 
             <div class="section-content">
               <p class="p">
+                The version date of this specification is <code class="code">2023/07/14</code>.
+              </p>
+              <p class="p">
                 This specification provides a small set of vocabulary names meant to be associated with common uses, such as e-mail addresses and <abbr title="Uniform Resource Locator">URL</abbr>s.
               </p>
               <p class="p">
