--- a/fll/specifications/other/time.html
+++ b/fll/specifications/other/time.html
@@ -82,6 +82,9 @@
 
             <div class="section-content">
               <p class="p">
+                The version date of this specification is <code class="code">2023/12/16</code>.
+              </p>
+              <p class="p">
                 There are two units of <strong class="strong">Time</strong>, the first is simply called <strong class="strong">Time</strong> and the second is called <strong class="strong">EpochTime</strong>.
               </p>
               <p class="p">
@@ -99,7 +102,7 @@
                 The systems should expect 64-bit and larger bits would have to become common before something larger than 64-bit is the expected or assumed default.
                 Negative signs can be allowed but they must not prevent the full use of the 64-bit.
                 The implementation of how this is done is left to the implementer except that the signs are immediately to the left of the digit.
-                For example <code class="code">2022:-5</code> would be 5 units after the start of the year 2022.
+                For example <code class="code">2022:-5</code> would be 5 units before the start of the year 2022.
                 Because the negative is allowed, so must the positive character (such as <code class="code">2022:+5</code>).
                 A positive value is the default interpretation when no sign is valid.
               </p>
@@ -115,7 +118,9 @@
               <p class="p">
                 The unit of time called <strong class="strong">Time</strong> is counted increments of a nanosecond, or 10^-9 seconds.
                 A unit of <strong class="strong">Time</strong> is, therefore, equivalent to a nanosecond.
-                The default year for <strong class="strong">Time</strong> is the current year.
+                When the year is not specified, then the behavior of the year is not defined.
+                The year can be inferred, directly designated through some other means, understood, asserted, or simply unknown or otherwise unspecified.
+                The general recommendation is that the default year for bold:"Time" is the current year.
               </p>
               <p class="p">
                 The unit <strong class="strong">Time</strong> has two technical forms and one common form, with the year and without the year.
@@ -234,7 +239,8 @@
               <p class="p">
                 The unit of time called <strong class="strong">EpochTime</strong> is counted increments of a second, or 10^-9 seconds.
                 A unit of <strong class="strong">EpochTime</strong> is, therefore, equivalent to a second.
-                The default year for <strong class="strong">EpochTime</strong> is the <strong class="strong">UNIX Epoch</strong>, sometimes called <strong class="strong">Unix time</strong>.
+                The behavior when the year is not specified is the same as described for the bold:"Time".
+                The general recommendation is that the default year for <strong class="strong">EpochTime</strong> is the <strong class="strong">UNIX Epoch</strong>, sometimes called <strong class="strong">Unix time</strong>.
               </p>
               <p class="p">
                 The unit <strong class="strong">EpochTime</strong> has two technical forms and one common form, with the year and without the year.
