--- a/fll/specifications/fss/fss-0005.html
+++ b/fll/specifications/fss/fss-0005.html
@@ -81,6 +81,9 @@
 
             <div class="section-content">
               <p class="p">
+                The version date of this specification is <code class="code">2023/07/14</code>.
+              </p>
+              <p class="p">
                 This is a code"fss-0002 (Basic List)" whose Content is then processed as <code class="code">fss-0001 (Extended)</code>.
               </p>
               <p class="p">
