--- a/fll/specifications/fss/fss-000c.html
+++ b/fll/specifications/fss/fss-000c.html
@@ -81,6 +81,9 @@
 
             <div class="section-content">
               <p class="p">
+                The version date of this specification is <code class="code">2023/07/14</code>.
+              </p>
+              <p class="p">
                 The IKI specifications are separate specifications from the <abbr title="Featureless Settings Specifications">FSS</abbr>.
                 This is simply a more formal way to designate that this format utilizes IKI syntax.
               </p>
