--- a/fll/specifications/fss/fss-000e.html
+++ b/fll/specifications/fss/fss-000e.html
@@ -81,47 +81,71 @@
 
             <div class="section-content">
               <p class="p">
+                The version date of this specification is <code class="code">2024/01/01</code>.
+              </p>
+              <p class="p">
                 This is a <code class="code">fss-0002 (Basic List)</code> with two required objects:
               </p>
               <ol>
                 <li><em class="em">header</em>.</li>
-                <li><em class="em">payload</em>.</li>
+                <li><em class="em">signature</em> (optional).</li>
+                <li><em class="em">payload</em> (optional).</li>
               </ol>
               <p class="p">
                 The <em class="em">header</em>:
               </p>
               <ul>
-                <li>The <em class="em">header</em>'s Content is of type <code class="code">fss-0001 (Extended)</code>.</li>
-                <li>The <em class="em">header</em> is recommended to have the Objects <em class="em">length</em>, <em class="em">status</em>, <em class="em">part</em>, and <em class="em">total</em>.</li>
+                <li>The <em class="em">header</em>'s Content is of type <code class="code">FSS-0001 (Extended)</code>.</li>
+                <li>The <em class="em">header</em> is recommended to have the Objects <em class="em">length</em>, <em class="em">status</em>, <em class="em">part</em>, <em class="em">total</em>, and <em class="em">type</em>.</li>
                 <li>The recommended <em class="em">length</em> represents the size of the <em class="em">payload</em>.</li>
                 <li>The recommended <em class="em">part</em> represents a single part of a set of packets for when the data being transmitted is split across multiple payloads.</li>
-                <li>The recommended <em class="em">total</em> represents the total number of parts representing a complete data transmitted across multiple payloads.</li>
                 <li>The recommended <em class="em">status</em> represents status codes (such as success or failure) and multiple.</li>
+                <li>The recommended <em class="em">total</em> represents the total number of parts representing a complete data transmitted across multiple payloads.</li>
+                <li>The recommended <em class="em">type</em> represents the type of information being transmitted.</li>
                 <li>The Content for the recommended <em class="em">length</em> and <em class="em">status</em> are positive whole numbers (including zero) that may be in <em class="em">binary</em>, <em class="em">octal</em>, <em class="em">decimal</em>, <em class="em">duodecimal</em>, or <em class="em">hexidecimal</em> numerical format.</li>
+                <li>There may be multiple <em class="em">header</em> Object and associated Content but the behavior is not defined by this standard.</li>
+                <li>For guaranteed safe and compatible behavior, only a single <em class="em">header</em> Object and associated Content should be defined.</li>
+              </ul>
+              <p class="p">
+                The <em class="em">signature</em>:
+              </p>
+              <ul>
+                <li>The <em class="em">signature</em>'s Content is of type <code class="code">FSS-0001 (Extended)</code>.</li>
+                <li>This is an optional Object and Content set.</li>
+                <li>This is intended to be used to specify signatures and checksums, such as GPG signatures or SHA256 checksums.</li>
+                <li>This can be used to sign or provide checksums on <em class="em">header</em> and the <em class="em">payload</em>.</li>
+                <li>There may be multiple <em class="em">signature</em> Object and associated Content but the behavior is not defined by this standard.</li>
+                <li>For guaranteed safe and compatible behavior, only a single <em class="em">signature</em> Object and associated Content should be defined.</li>
               </ul>
               <p class="p">
                 The <em class="em">payload</em>:
               </p>
               <ul>
                 <li>The <em class="em">payload</em>'s Content may contain anything, including raw binary data.</li>
-                <li>The <em class="em">payload</em> is <em class="em">required</em> to be the last list Object in the file.</li>
+                <li>The <em class="em">payload</em> is <em class="em">required</em> to be the last list Object in the file, if present.</li>
                 <li>The <em class="em">payload</em> is recommended to have its size designated in some manner in the <em class="em">header</em> (such as with the recommended <em class="em">length</em>).</li>
                 <li>The <em class="em">payload</em> is terminated by the <abbr title="End of File">EOF</abbr> character or by the recommended <em class="em">length</em> header.</li>
-                <li>The <em class="em">payload</em> may be empty (length may be zero), but the list Object <em class="em">payload</em> must still exist.</li>
-                <li>Nothing in the <em class="em">payload</em> may be considered a valid list Object by the outer <code class="code">fss-0002 (Basic List)</code> and therefore escaping is unnecessary (No further processing by the outer <code class="code">fss-0002 (Basic List)</code> is allowed at this point).</li>
+                <li>The <em class="em">payload</em> may be empty (length may be zero).</li>
+                <li>Nothing in the <em class="em">payload</em> may be considered a valid list Object by the outer <code class="code">FSS-0002 (Basic List)</code> and therefore escaping is unnecessary (No further processing by the outer <code class="code">FSS-0002 (Basic List)</code> is allowed at this point).</li>
                 <li>Comments in the <em class="em">payload</em> are not considered comments and are instead considered part of the payload, as-is.</li>
                 <li>Essentially, the <em class="em">payload</em> should be treated as binary data embedded in a text file.</li>
+                <li>There may only be a single <em class="em">payload</em> Object and associated Content.</li>
+                <li>Any <em class="em">payload</em> Object and associated Content that is not the last must not have its Content data treated as binary in the same way as the last <em class="em">payload"</em> Object and associated Content.</li>
               </ul>
               <p class="p">
                 The recommended <em class="em">length</em> <em class="em">header</em> Object used to designate the <em class="em">payload</em> size does not necessarily have to be defined in the <em class="em">header</em>.
                 That is to say, if the <em class="em">payload</em> is expected to be of some pre-defined or static length then a length does not need to be provided in the <em class="em">header</em>.
               </p>
               <p class="p">
-                The recommended <em class="em">status</em> <em class="em">header</em> Object may be a string, such as <code class="code">F_none</code>, or a positive whole number.
+                The recommended <em class="em">length</em> <em class="em">header</em> Object used to designate the <em class="em">payload</em> size does not necessarily have to be defined in the <em class="em">header</em>.
+                That is to say, if the <em class="em">payload</em> is expected to be of some pre-defined or static length then a length does not need to be provided in the <em class="em">header</em>.
+              </p>
+              <p class="p">
+                The recommended <em class="em">status</em> <em class="em">header</em> Object may be a string, such as <code class="code">F_okay</code>, or a positive whole number.
                 What the status code represents is application specific (or specific to a sub-standard) but may often be used to represent <abbr title="Featureless Linux Library">FLL</abbr> status code.
               </p>
               <ul>
-                <li>The <abbr title="Featureless Linux Library">FLL</abbr> status code is a 16-bit digit whose first two high-order bits represent <em class="em">error</em> and <em class="em">warning</em> ( representing <em class="em">signal</em>).</li>
+                <li>The <abbr title="Featureless Linux Library">FLL</abbr> status code is a 16-bit digit whose first two high-order bits represent <em class="em">error</em> and <em class="em">warning</em> (representing <em class="em">signal</em>).</li>
                 <li>The <abbr title="Featureless Linux Library">FLL</abbr> status code as a number is binary sensitive and may not be portable across binaries or systems.</li>
                 <li>For best portability, consider using status as a name string to ensure cross-system or cross-binary compatibility.</li>
               </ul>
@@ -135,6 +159,11 @@ header:
   status 296
   length 30
 
+signature:
+  header sha1 e31b562d6ceba5e59dfaefbd7a37df6a20cad970
+  header type md5 cb5e100e5a9a3e7f6d1fd97512215282
+  payload sha256 fa4e17188867095856b8c5b7ff8f79e6f96c7a36621309473d09acc3fa0fe4d9
+
 payload:
 The program is out of memory.
 </pre>
@@ -143,7 +172,8 @@ The program is out of memory.
               </p><pre class="preserve">
 Outer Objects would be:
   1) header
-  2) payload
+  2) signature
+  3) payload
 
 "header" Objects would be:
   1.1) type
@@ -155,8 +185,18 @@ Outer Objects would be:
   1.2.1) 296
   1.3.1) 30
 
+"signature" Objects would be:
+  2.1) header
+  2.2) header
+  2.3) payload
+
+"signature" Contents would be:
+  2.1.1) sha1 e31b562d6ceba5e59dfaefbd7a37df6a20cad970
+  2.2.1) type md5 cb5e100e5a9a3e7f6d1fd97512215282
+  2.3.1) sha256 fa4e17188867095856b8c5b7ff8f79e6f96c7a36621309473d09acc3fa0fe4d9
+
 The payload would be:
-  2) The program is out of memory.
+  3) The program is out of memory.
 </pre>
             </div>
           </section>
