--- a/fll/specifications/fss/fss-0010.html
+++ b/fll/specifications/fss/fss-0010.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>FLL - Specifications - FSS-0001 (Extended)</title>
+    <title>FLL - Specifications - FSS-000F (Simple Packet)</title>
 
     <base href="../../../">
 
     <meta charset="UTF-8">
     <meta name="author" content="Kevin Day">
     <meta name="description" content="Featurless Linux Library Specifications">
-    <meta name="keywords" content="Kevin Day, Kevux, FLL, Featureless, Linux, Library, Distribution, Open-Source, specification, standard, fss-0001, extended">
+    <meta name="keywords" content="Kevin Day, Kevux, FLL, Featureless, Linux, Library, Distribution, Open-Source, specification, standard, fss-0010, encrypted simple packet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link type="text/css" rel="stylesheet" media="all" href="css/kevux.css">
@@ -23,12 +23,11 @@
     <link type="text/css" rel="stylesheet" media="only print and (orientation:landscape)" href="css/kevux-print-landscape.css">
     <link type="text/css" rel="stylesheet" media="only print and (orientation:portrait)" href="css/kevux-print-portrait.css">
 
-    <link rel="canonical" href="fll/specifications/fss/fss-0001.html">
+    <link rel="canonical" href="fll/specifications/fss/fss-0010.html">
     <link type="image/x-icon" rel="icon" href="images/kevux.ico">
     <link type="image/x-icon" rel="shortcut" href="images/kevux.ico">
     <link type="text/html" rel="license" href="licenses.html">
-    <link type="text/html" rel="prev" href="fll/specifications/fss/fss-0000.html">
-    <link type="text/html" rel="next" href="fll/specifications/fss/fss-0002.html">
+    <link type="text/html" rel="prev" href="fll/specifications/fss/fss-000f.html">
   </head>
 
   <body id="kevux" class="kevux no-js fll specifications">
@@ -59,11 +58,11 @@
             <div class="nav-text unlink">FSS</div>
           </div>
           <div class="nav-item block">
-            <a href="fll/specifications/fss/fss-0001.html#fss-0001" class="nav-text link"><div>FSS-0001</div><div>(Extended)</div></a>
+            <a href="fll/specifications/fss/fss-0010.html#fss-0010" class="nav-text link"><div>FSS-0010</div><div>(Encrypted Simple Packet)</div></a>
           </div>
           <div class="nav-item block ellipses">
-            <a href="fll/specifications/fss/fss-0001.html#nav-expanded" class="nav-text link open" title="Expand Menu">…</a>
-            <a href="fll/specifications/fss/fss-0001.html" class="nav-text link close">Collapse Menu</a>
+            <a href="fll/specifications/fss/fss-0010.html#nav-expanded" class="nav-text link open" title="Expand Menu">…</a>
+            <a href="fll/specifications/fss/fss-0010.html" class="nav-text link close">Collapse Menu</a>
           </div>
         </nav>
       </div>
@@ -74,81 +73,57 @@
             <h1 class="section-title h h1">Featureless Linux Library Specification</h1>
           </header>
 
-          <section id="fss-0001" class="section">
+          <section id="fss-0010" class="section">
             <header class="section-header header">
-              <h2 class="section-title h h2">FSS-0001 (Extended)</h2>
+              <h2 class="section-title h h2">FSS-0010 (Encrypted Simple Packet)</h2>
             </header>
 
             <div class="section-content">
               <p class="p">
-                The version date of this specification is <code class="code">2023/07/14</code>.
+                The version date of this specification is <code class="code">2023/07/16</code>.
               </p>
               <p class="p">
-                Each Object starts at the beginning of a line and white space to the left of the Object is not treated as an object.
-                White space separates an Object from the Content.
-                An Object may be followed by a newline, in which case means that the Object has no Content.
-                If only printing white spaces or non-printable characters follow a valid Object, then that Object is considered to have no Content.
-                An Object may be quoted to include whitespace where a single quote <code class="code">'</code> (<code class="code">U+0027</code>), a double quote <code class="code">"</code> (<code class="code">U+0022</code>), or a backtick <code class="code">`</code> (<code class="code">U+0060</code>) are used to quote.
+                This is an encrypted form of the network packet format of <code class="code">FSS-000f (Simple Packet)</code>.
               </p>
               <p class="p">
-                Content exists on the same line as the Object.
-                Content is represented as multiple Content columns.
-                Content columns are white space separated parts within the Content and terminated by a newline.
-                Any number of Content columns may exist in the Content until the newline is reached.
+                The entire <strong class="strong">Payload Block</strong> is undefined by this standard and is instead defined by the encryption algorithm or standard in use.
+                There is no rule, restriction, requirement, or definition on what encryption can be used.
+                The only rule is that the <strong class="strong">Payload Block</strong> must be of a valid length as defined by the <strong class="strong">Size Block</strong>.
               </p>
               <p class="p">
-                Key:
+                The general rule is that it can be assumed that the encrypted data in the <strong class="strong">Payload Block</strong> would be of the <code class="code">FSS-000e (Payload)</code> format. Being that the data is supposed to be encrypted, the actual contents of the <strong class="strong">Payload Block</strong> is left undefined.
               </p>
-              <ul>
-                <li><code class="code">\s</code> = White space, except newline.</li>
-                <li><code class="code">\b</code> = Either white space or printable, except newline.</li>
-                <li><code class="code">\q</code> = Non-white space or quoted white space (and non-whitespace) with no white space outside of the quotes.</li>
-                <li><code class="code">\n</code> = Newline.</li>
-                <li><code class="code">*</code> = Zero or more occurrences.</li>
-                <li><code class="code">+</code> = One or more occurrences.</li>
-                <li><code class="code">()*</code> = Grouping that repeats zero or more times.</li>
-              </ul>
               <p class="p">
-                Before Structure:
+                The <code class="code">FSS-000f (Simple Packet)</code> that this standard modifies does not require the <strong class="strong">Payload Block</strong> to be in <code class="code">FSS-000e (Payload)</code> format.
+                This standard is even more lax than <code class="code">FSS-000f (Simple Packet)</code> and drops replaces the words <em class="em">should be in</em> from the <code class="code">FSS-000f (Simple Packet)</code> standard and replaces them with <em class="em">could be in</em>.
               </p>
-              <ul>
-                <li><code class="code"></code></li>
-              </ul>
               <p class="p">
-                Structure:
+                This allows for the encrypted data to be anything the user wants, such as but not limited to HTTP:"Hypertext Transfer Protocol".
               </p>
-              <ul>
-                <li><code class="code">\s*\q+\s+(\s*\q+)*\s*\n</code></li>
-              </ul>
               <p class="p">
-                After Structure:
+                When it comes to security, any and all data can be useful. For best encryption, one may want to consider not using this format because of the <strong class="strong">Control Block</strong> and the <strong class="strong">Size Block</strong> are not encrypted.
               </p>
-              <ul>
-                <li><code class="code"></code></li>
-              </ul>
               <p class="p">
-                Example:
+                The endianness bit should only be used to represent the <strong class="strong">Size Block</strong> to avoid any security concerns. The endianness of the encrypted needs to be determined through some other means for any kind of reasonable security.
+              </p>
+              <p class="p">
+                This standard uses the third bit from the left in the <strong class="strong">Control Block</strong> to designate that this is an encrypted packet.
+              </p>
+              <p class="p">
+                The 5 remaining control bits are left undefined.
+              </p>
+              <p class="p">
+                See the <a href="fll/specifications/fss/fss-000f.html" class="link">fss-000f (Simple Packet)</a> specification file for details regarding the <code class="code">FSS-000f (Simple Packet)</code> standard.
+              </p>
+              <p class="p">
+                Example Packet Structure:
               </p><pre class="preserve">
-# fss-0001
-# valid comments are ignored.
-"The Object" Content "content 2" content_3.
-Second object set.
+[ Control Block ] [ Size Block                                  ] [ Payload Block         ]
+[ 0b10100000    ] [ 0b00000000 0b00000000 0b00000100 0b11010010 ] [ size: 1229 (1234 - 5) ]
 </pre>
               <p class="p">
-                Example Results:
-              </p><pre class="preserve">
-Objects would be:
-  1) The Object
-  2) Second
-
-Contents would be:
-  1.1) Content
-  1.2) content 2
-  1.3) content_3.
-
-  2.1) object
-  2.2) set.
-</pre>
+                In the above example, take note that the third bit in the <strong class="strong">Control Block</strong> is a 1.
+              </p>
             </div>
           </section>
         </main>
