--- a/fll/specifications/iki/iki-0002.html
+++ b/fll/specifications/iki/iki-0002.html
@@ -83,6 +83,9 @@
 
             <div class="section-content">
               <p class="p">
+                The version date of this specification is <code class="code">2023/07/14</code>.
+              </p>
+              <p class="p">
                 This specification provides a small set of vocabulary names meant to be used for substitution in simple scripts.
               </p>
               <p class="p">
