Update: News - 2024 / 02 / 24 - Programming Happenings.
Add programming happenings news.

Update the copyright year on numerous pages.

Add the Open Standard License to the website.

Move the year 2023 into its own section and setup the year 2024 pages.

--- a/licenses.html
+++ b/licenses.html
@@ -68,6 +68,9 @@
           <div class="nav-item block">
             <a href="licenses.html#license-documentation" class="nav-text link">Documentation Licenses</a>
           </div>
+          <div class="nav-item block">
+            <a href="licenses/oslv1.html" class="nav-text link">Open Standard License 1</a>
+          </div>
           <div class="nav-item block ellipses">
             <a href="licenses.html#nav-expanded" class="nav-text link open" title="Expand Menu">…</a>
             <a href="licenses.html" class="nav-text link close">Collapse Menu</a>
@@ -96,7 +99,7 @@
                 Everything else on this website that is source code, including <abbr title="Hyper Text Markup Language">HTML</abbr> markup, <abbr title="Cascading Style Sheets">CSS</abbr>, and Javascript, is under <abbr title="GNU Lesser General Public License version 2.1 or greater">LGPLv2.1+</abbr> license.
               </p>
               <p class="p">
-                © 2022-2023 Kevin Day
+                © 2022-2024 Kevin Day
               </p>
             </div>
           </article>
@@ -121,12 +124,12 @@
             </header>
             <div class="article-content">
               <p class="p">
-                The <abbr title="Featureless Linux Library">FLL</abbr> source code is © 2007-2023 Kevin Day under the <abbr title="GNU Lesser General Public License version 2.1 or greater">LGPLv2.1+</abbr> license.
+                The <abbr title="Featureless Linux Library">FLL</abbr> source code is © 2007-2024 Kevin Day under the <abbr title="GNU Lesser General Public License version 2.1 or greater">LGPLv2.1+</abbr> license.
               </p>
               <p class="p">
-                The <abbr title="Featureless Linux Library">FLL</abbr> standards and specifications are © 2007-2023 Kevin Day under the <abbr title="Open Standard License version 1 or greater">OSLv1+</abbr>. The <abbr title="Open Standard License version 1 or greater">OSLv1+</abbr> is under active development and may be of a lesser version, such as 0.5. For simplicity, these are being referred to as 1.0 as the goal and intent of the license grant is for version 1 or greater. Therefore any version less than 1 is implicitly assumed to be of version 1 or greater.
+                The <abbr title="Featureless Linux Library">FLL</abbr> standards and specifications are © 2007-2024 Kevin Day under the <a href="licenses/oslv1.html" class="link"><abbr title="Open Standard License version 1 or greater">OSLv1+</abbr></a>. The <a href="licenses/oslv1.html" class="link"><abbr title="Open Standard License version 1 or greater">OSLv1+</abbr></a> is under active development and may be of a lesser version, such as 0.5. For simplicity, these are being referred to as 1.0 as the goal and intent of the license grant is for version 1 or greater. Therefore any version less than 1 is implicitly assumed to be of version 1 or greater.
               <p class="p">
-                Documentation contained within the <abbr title="Featureless Linux Library">FLL</abbr> that is not under a specification license is © 2007-2023 Kevin Day under the <abbr title="Creative Commons Attribution Share Alike 4.0 International">CC By SA 4.0</abbr>.
+                Documentation contained within the <abbr title="Featureless Linux Library">FLL</abbr> that is not under a specification license is © 2007-2024 Kevin Day under the <abbr title="Creative Commons Attribution Share Alike 4.0 International">CC By SA 4.0</abbr>.
               </p>
             </div>
           </article>
@@ -137,7 +140,7 @@
             </header>
             <div class="article-content">
               <p class="p">
-                All of the projects listed on the Projects pages are either part of the <abbr title="Featureless Linux Library">FLL</abbr> or are based on the <abbr title="Featureless Linux Library">FLL</abbr>. As a result they are © 2007-2023 Kevin Day under the <abbr title="GNU Lesser General Public License version 2.1 or greater">LGPLv2.1+</abbr>.
+                All of the projects listed on the Projects pages are either part of the <abbr title="Featureless Linux Library">FLL</abbr> or are based on the <abbr title="Featureless Linux Library">FLL</abbr>. As a result they are © 2007-2024 Kevin Day under the <abbr title="GNU Lesser General Public License version 2.1 or greater">LGPLv2.1+</abbr>.
               </p>
             </div>
           </article>
@@ -148,10 +151,10 @@
             </header>
             <div class="article-content">
               <p class="p">
-                Documentation that is used to described specifications (included Application Programming Interfaces) are © 2007-2023 Kevin Day under the <abbr title="Open Standard License version 1 or greater">OSLv1+</abbr>.
+                Documentation that is used to described specifications (included Application Programming Interfaces) are © 2007-2024 Kevin Day under the <a href="licenses/oslv1.html" class="link"><abbr title="Open Standard License version 1 or greater">OSLv1+</abbr></a>.
               </p>
               <p class="p">
-                ALl remaining documentation that does not fall under the <abbr title="Open Standard License version 1 or greater">OSLv1+</abbr> are © 2007-2023 Kevin Day under the <abbr title="Creative Commons Attribution Share Alike 4.0 International">CC By SA 4.0</abbr>.
+                All remaining documentation that does not fall under the <a href="licenses/oslv1.html" class="link"><abbr title="Open Standard License version 1 or greater">OSLv1+</abbr></a> are © 2007-2024 Kevin Day under the <abbr title="Creative Commons Attribution Share Alike 4.0 International">CC By SA 4.0</abbr>.
               </p>
             </div>
           </article>
