--- a/sources.html
+++ b/sources.html
@@ -95,6 +95,7 @@
                 <li>Backup Source 1: <a href="https://github.com/thekevinday/fll/" class="link external">https://github.com/thekevinday/fll/</a></li>
                 <li>Backup Source 2: <a href="https://gitlab.com/kevuxer/fll/" class="link external">https://gitlab.com/kevuxer/fll/</a></li>
                 <li>Backup Source 3: <a href="https://codeberg.org/kevuxer/fll" class="link external">https://codeberg.org/kevuxer/fll</a></li>
+                <li>Backup Source 4: <a href="https://git.kevux.org" class="link external">https://git.kevux.org</a></li>
               </ul>
             </div>
           </article>
@@ -174,6 +175,7 @@
                 <li><a href="https://github.com/thekevinday/kevux.org-website" class="link external">https://github.com/thekevinday/kevux.org-website</a></li>
                 <li><a href="https://gitlab.com/kevuxer/kevux.org-website" class="link external">https://gitlab.com/kevuxer/kevux.org-website</a></li>
                 <li><a href="https://codeberg.org/kevuxer/kevux.org-website" class="link external">https://codeberg.org/kevuxer/kevux.org-website</a></li>
+                <li><a href="https://git.kevux.org/?p=kevux.org-website;a=summary" class="link external">https://git.kevux.org/?p=kevux.org-website;a=summary</a></li>
               </ul>
             </div>
           </article>
