Cleanup: The OSLv1 license, fixing grammar and clarifying intent.
This does not change the license other than fixing grammar and making the intent more consistent and clear.

This also adds a day to the license data that represents that last time this license has been modified.
The version number is changed only when there is a functional or substantial change to the license.

I have noticed that in some places individuals decide the "includes" is a restrictive word.
It is not, especially given that it is literally an inclusive word.
This changes the wording from "includes" or "including" to something like "including but not limited to" avoid any of that non-sense.
The proper application of the English language would result in the "but not limited to" being redundant and pointless.
This specific language is added just in case somebody does not understand the English language when it comes to the word "including".

Try to be consistent and use "lawful" instead of "legal" (except in cases where both are mentioned).

Generally, referring to "lawful" here also includes "legal".
The "lawful" is chosen to represent actual law rather than the more questionable "legal"  terminology.

The wording of "access to use, implement, etc.." can be misinterpreted such that the "access to" is applied to implement (and etc..) such that it becomes "access to implement".
The actual intent and design is not simply around "access to implement".
Instead, it is around "to implement", period.
Clarify this by splitting out "access to use" into "to access", "to use", etc...

--- a/licenses/oslv1.html
+++ b/licenses/oslv1.html
@@ -73,7 +73,7 @@
               The following is the literal license as a plain text file for direct display.
             </p>
             <pre class="preserve">Open Standard License 1.0.
-  February 2024.
+  February 27, 2024.
 
 This license applies to the Standards and their Specifications and designates legal requirements on Implementations of the Standard and their respective Specifications.
 
@@ -101,21 +101,21 @@ Terminology:
 01) Principles of this license:
   01) The Standard or Specification is and must be freely and publicly available to use and implement irrespective of any license, patent, or other restriction of any kind for any reason of some Implementation or Provider.
   02) All patents associated are and must be royalty-free for unrestricted use and must not impose any restrictions on any third party's Implementation of this Standard in any way for any reason beyond those described in this license.
-  03) There are not and there must not be any agreements or requirements for the execution of this license grant, including: NDA, grant, click-through, or any form of paperwork (including all non-paper forms of paperwork, such as digital forms).
+  03) There are not and there must not be any agreements or requirements for the execution of this license grant, including but not limited to: NDA, grant, click-through, or any form of paperwork (including but not limited to all non-paper forms of paperwork, such as digital forms).
   04) There are not and must not be any restrictions on the form of an Implementation of a Standard or Specification.
-  05) Implementations of the Standard or Specification may be under any license so long as that license:
+  05) Implementations of a Standard or Specification may be under any license so long as that license:
     a) Does not restrict, alter, or invalidate this license in any manner.
-    b) Does not impose any form of restrictions on the access to use, implement, extend, or deviate from anything allowed or otherwise granted by this license.
-  06) This license shall prohibit any form of restricting any parties access to use, implement, extend, or deviate from this Standard unless:
+    b) Does not impose any form of restrictions to access, to use, to implement, to extend, or to deviate from anything allowed or otherwise granted by this license.
+  06) This license shall prohibit any form of restricting any parties to access, to use, to implement, to extend, or o deviate from this Standard unless:
     a) Restricted by this license.
     b) Unless there is a breach of license conditions.
   07) This license is irrevocable unless there is a breach of the license conditions.
   08) This license does not grant any kind of warranty or liability under any circumstances to any party for any reason, be it direct, indirect, consequential, incidental, or in any other form.
   09) This license does not restrict any party from optionally providing their own warranty or liability on any Implementation but such warranties or liabilities are completely separate and independent of this license in all circumstances for any reason, be it direct, indirect, consequential, incidental, or for any other reason.
-  10) The final and absolute determination of any terminology and intent of this license is by the original owner of this license or a party explicitly authorized by the original license owner or party, and is not in any way subject to re-interpretation or re-definition in any way for any reason by any party including but not limited to judges, juries, lawyers, attorneys, technicians, "experts", or governments.
-  11) Any restriction, alteration, removal, invalidation, making illegal, or making unlawful of or against any part of this license by any party, such as but not limited to a government or judge, shall not permanently alter this license in any way for any reason. That is for example, if some court seems deems some part of this illegal then later makes it legal the now re-legalized parts do and must immediately apply once more as if it were never made illegal.
-  12) When at any point in time under any government any parts of this license is restricted, altered, removed, invalidated or otherwise made illegal (or unlawful) is reversed, restored, or otherwise made legal, lawful, and enforceable again, these parts are immediately in affect again.
-  13) If at any point in time some party, such as but not limited to a government, makes any such change to this license like those described in [01.11] and the licensee for any reason at any time is no longer subject to said jurisdiction, then those parts of the original license are immediately in effect again as if they were never altered or restricted in the first place. For example, if a licensee leaves the jurisdiction of some government that restricted some part of this license then that restricted part is immediately in affect again now that the licensee is out of the said jurisdiction.
+  10) The final and absolute determination of any terminology and intent of this license is by the original owner of this license or a party explicitly authorized by the original license owner or party, and is not in any way subject to re-interpretation or re-definition in any way for any reason by any party including but not limited to judges, juries, lawyers, attorneys, technicians, experts, or governments.
+  11) Any restriction, alteration, removal, invalidation, making illegal, or making unlawful of or against any part of this license by any party, such as but not limited to a government or judge, shall not permanently alter this license in any way for any reason. That is for example, if some court deems some part of this unlawful and then later makes it lawful, then the now re-lawfulized parts do and must immediately apply once more as if it were never made unlawful.
+  12) When at any point in time under any government any parts of this license is restricted, altered, removed, invalidated or otherwise made illegal, unlawful, or unenforceable is reversed, restored, or otherwise made legal, lawful, and enforceable again, then these parts are immediately in affect again.
+  13) If at any point in time some party, such as but not limited to a government, makes any change to this license (like those described in [01.11]) and the licensee for any reason at any time is no longer subject to a given jurisdiction, then those parts of the original license are immediately in effect as if they were never altered or restricted in the first place. For example, if a licensee leaves the jurisdiction of some government that otherwise restricted some part of this license then that otherwise restricted part is immediately in affect again now that the licensee is out of the given jurisdiction.
 </pre>
             </code>
           </div>
